<resources>
    <string name="app_name">NoteApp</string>
    <string name="bienvenido_text">Bienvenido</string>
    <string name="welcome_text">Welcome</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="registrarse_text">No tienes una cuenta? Registrate</string>
    <string name="olvidar_contra">Olvidaste la contraseña?</string>
    <string name="login_social_media">Login via social media</string>
    <string name="iniciar_sesion">Tienes una cuenta? Inicia sesión</string>

    <!--for facebook login-->

    <!--facebook login ends-->

    <!--error messages-->
</resources>