<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="195dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_note_list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:text="@string/olvidar_contra"
                android:textColor="@color/primaryTextColor"
                android:textSize="15sp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Login"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_social_media"
                    android:layout_weight="6"
                    android:textSize="14sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="3"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.381"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.195"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:text="@string/registrarse_text"
                android:layout_marginTop="@dimen/loginViewsMargin" />

        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_img"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp" />
</RelativeLayout>