<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_register_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.555"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/registerViewsMargin">
                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="Name"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/registerViewsMargin">
                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/login_email_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/registerViewsMargin">
                        <EditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="#FFF"
                        android:text="Register"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/registerViewsMargin"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_padding="6dp"/>
                    <TextView
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:text="@string/iniciar_sesion"
                        android:layout_marginTop="@dimen/registerViewsMargin"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="Registrate via redes sociales"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.39"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.169"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"/>
</RelativeLayout>